src/test/ui/parser/trait-pub-assoc-const.stderr
error: expected one of `async`, `const`, `extern`, `fn`, `type`, `unsafe`, or `}`, found `pub`
  --> $DIR/trait-pub-assoc-const.rs:4:5
   |
LL | trait Foo {
   |            - expected one of 7 possible tokens here
LL |     pub const Foo: u32;
   |     ^^^ unexpected token

error: aborting due to previous error

